--- a/packages/senchacon-theme/package.json
+++ b/packages/senchacon-theme/package.json
@@ -1,7 +1,7 @@
 {
     "name": "senchacon-theme",
     "type": "theme",
-    "extend": "ext-theme-neptune-touch"
+    "extend": "ext-theme-neptune-touch",
     "creator": "Lee Boonstra",
     "summary": "Short summary",
     "detailedDescription": "Long description of package",
