--- a/playstation/app.json
+++ b/playstation/app.json
@@ -38,6 +38,7 @@
      * The name of the theme for this application.
      */
 
+     //"theme":"ext-theme-neptune",
     "theme": "playstation",
 
     /**
