--- a/senchacon/app.json
+++ b/senchacon/app.json
@@ -33,8 +33,18 @@
      * The name of the theme for this application.
      */
     
-    "theme": "senchacon-theme",
     
+    //PLEASE NOTE THIS CHANGE:
+    //"theme": "senchacon-theme",
+    "builds": {
+        "senchacon-theme": {
+            "theme": "senchacon-theme"
+        },
+        "senchacon-theme-touch": {
+            "theme": "senchacon-theme-touch"
+        }
+    },
+
     /**
      * The list of required packages (with optional versions; default is "latest").
      *
@@ -139,11 +149,18 @@
      *      }
      */
     "css": [
+        //{
+        //    "path": "bootstrap.css",
+        //    "bootstrap": true
+        //},
+        //PLEASE NOTE THIS CHANGE
         {
-            "path": "bootstrap.css",
+            "path":"${build.out.css.dir}/MyApp-all.css",
             "bootstrap": true
         }
     ],
+
+
 
     /**
      * This option is used to configure the dynamic loader. At present these options
@@ -208,10 +225,13 @@
      */
     "bootstrap": {
         "base": "${app.dir}",
-        "manifest": "bootstrap.json",
+        //PLEASE NOTE THIS CHANGE
+        //"manifest": "bootstrap.json",
+        "manifest": "${build.id}.json",
         "microloader": "bootstrap.js",
         "css": "bootstrap.css"
     },
+
 
     /**
      *  Controls the output directory for build resources.  May be set with
@@ -248,8 +268,17 @@
      *      }
      *
      */
+    //PLEASE NOTE THIS CHANGE
+    //"output": {
+    //    "base": "${workspace.build.dir}/${build.environment}/${app.name}"
+    //},
     "output": {
-        "base": "${workspace.build.dir}/${build.environment}/${app.name}"
+        "base": "${workspace.build.dir}/${build.environment}/${app.name}/${build.id}",
+        "page": "../index.html",
+        "manifest": "../${build.id}.json",
+        "appCache": {
+            "enable": false
+        }
     },
 
     /**
